almost full dinamic version

--- a/cv-client/src/components/pages/home-page/HomePage.scss
+++ b/cv-client/src/components/pages/home-page/HomePage.scss
@@ -54,6 +54,7 @@
         position: absolute;
         left: -25%;
         top: 0px;
+        height: 100vh;
       }
     }
     &__hr {
@@ -89,5 +90,47 @@
   &__projects {
     margin-top: 5 * $basic-margin;
   }
+
+
+  .article-cs {
+    &__header-block {
+        
+        background-color: $ui-black;
+        border-radius: 0px (4 * $basic-margin) (4 * $basic-margin) 0px;
+        width: fit-content;
+        padding: 2 * $basic-margin;
+
+    }
+    &__main {
+
+        &__list {
+            margin-left: 3 * $basic-margin;
+        }
+    }
+
+    .list {
+        &__title{
+            margin: 2 * $basic-margin;
+            display: flex;
+            align-items: center;
+        }
+        &__title-index {
+            background-color: $ui-grey-light;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 2 * $basic-margin;
+            padding: $basic-margin;
+            width: 4 * $basic-margin;
+            height: 4 * $basic-margin;
+            border-radius: 50%;
+            border: 1px solid $ui-black;
+        }
+        &__content {
+            margin-left: 5 * $basic-margin;
+            max-width: 50 * $basic-margin;
+        }
+    }
+}
   
 }
