--- a/cv-client/src/components/pages/home-page/HomePage.scss
+++ b/cv-client/src/components/pages/home-page/HomePage.scss
@@ -1,6 +1,12 @@
 @import "../../../theme/variables.scss";
 
 .home {
+  .descktop {
+    display: block;
+    @media screen and (max-width: $breakpoint-sm) {
+      display: none;
+    }
+  }
   .link-block {
     display: flex;
     align-items: center;
@@ -55,6 +61,11 @@
         left: 0%;
         top: 0px;
         height: 100vh;
+
+        @media screen and (max-width: $breakpoint-sm) {
+          left: -15 * $basic-margin;
+          // height: 80vh;
+        }
       }
     }
     &__hr {
@@ -132,6 +143,10 @@
 
             &__title ~ ul li {
               list-style-type: none;
+            }
+            @media screen and (max-width: $breakpoint-sm) {
+              margin-left: 2 * $basic-margin;
+              // height: 80vh;
             }
         }
     }
