--- a/cv-client/src/components/pages/home-page/HomePage.scss
+++ b/cv-client/src/components/pages/home-page/HomePage.scss
@@ -1,6 +1,9 @@
 @import "../../../theme/variables.scss";
 
 .home {
+  li {
+    margin-right: 5px;
+  }
   .descktop {
     display: block;
     @media screen and (max-width: $breakpoint-sm) {
