--- a/cv-client/src/components/main-layout/footer/Footer.scss
+++ b/cv-client/src/components/main-layout/footer/Footer.scss
@@ -16,5 +16,10 @@
     left: 10%;
     bottom: 0px;
     z-index: 1;
+    transition: all ease 0.4s;
+
+    &:hover {
+      opacity: 0.5;
+    }
   }
 }
