--- a/cv-client/src/theme/variables.scss
+++ b/cv-client/src/theme/variables.scss
@@ -60,3 +60,11 @@ $breakpoint-xs: 360px;
     font-size: 3.5rem;
   }
 }
+
+$ui-purple: #553795;
+$ui-purple-light: #664ba0;
+$ui-green: #6cc27f;
+$ui-green-dark: #62978f;
+$ui-white: #ffffff;
+$ui-black: #000000;
+$ui-grey: #837a9a;
