--- a/cv-client/src/components/form/Form.scss
+++ b/cv-client/src/components/form/Form.scss
@@ -48,17 +48,26 @@
       width: 100%;
       display: flex;
       justify-content: space-between;
-      * {
+      .input-field,
+      .input-area {
         flex: 1;
+        width: 100%;
       }
-      @media screen and (max-width: $breakpoint-lg) {
+      &--recaptcha {
+        display: flex;
+        justify-content: center;
+        margin-left: auto;
+        margin-right: auto;
+        width: 90%;
+      }
+      @media screen and (max-width: $breakpoint-md) {
         flex-direction: column;
         justify-content: center;
         align-items: center;
         .input-field-wrapper,
         .input-area,
         .field {
-          width: 100%;
+          width: 90%;
         }
       }
     }
@@ -90,36 +99,19 @@
     }
   }
   .captcha {
-    position: fixed;
-    top: 25%;
-    width: 60%;
-    left: 20%;
-    padding: 5%;
-    background: $ui-purple-light;
-    display: flex;
-    justify-content: center;
-    border-radius: 3 * $basic-margin;
-    opacity: 0.9;
+    position: relative;
     &__checkbox {
       top: 30%;
-      left: 30%;
+      left: 40%;
       position: absolute;
       opacity: 0;
-    }
-    &__item {
-      opacity: 1;
+      z-index: -1;
     }
     @media screen and (max-width: $breakpoint-sm) {
-      background: 0 0;
-      opacity: 1;
-
-      display: block;
       transform: scale(0.9);
-      left: 14%;
     }
     @media screen and (max-width: $breakpoint-xs) {
       transform: scale(0.8);
-      left: 6%;
     }
   }
 
