--- a/cv-client/src/components/pages/home-page/HomePage.scss
+++ b/cv-client/src/components/pages/home-page/HomePage.scss
@@ -1,11 +1,17 @@
-@import "../../../theme/variables.scss";
+@import '../../../theme/variables.scss';
 
 .home {
   .background-text {
+    cursor: default;
+    z-index: -1;
     opacity: 0.2;
     font-family: revert;
-    font-size: 15rem;
+    font-size: 12rem;
     // text-transform: uppercase;
+
+    @media screen and (max-width: $breakpoint-md) {
+      opacity: 0.1;
+    }
   }
   li {
     margin-right: 5px;
@@ -119,7 +125,9 @@
     &__background-title {
       position: absolute;
       left: 10%;
-      bottom: 0px;
+      top: 70 * $basic-margin;
+      top: 70vh;
+
       z-index: -1;
     }
   }
